// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    
    <form
        onSubmit={[Function]}
    >
        <input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Description"
            type="text"
            value=""
        />
        <input
            onChange={[Function]}
            placeholder="Amount"
            type="text"
            value=""
        />
        <SingleDatePicker
            anchorDirection="left"
            customCloseIcon={null}
            customInputIcon={null}
            date={"1970-01-01T00:00:00.000Z"}
            daySize={39}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            id="date"
            initialVisibleMonth={null}
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            orientation="horizontal"
            phrases={
                Object {
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month",
                    "jumpToPrevMonth": "Move backward to switch to the previous month",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                    "moveFocusByOneMonth": "Switch months",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                    "openThisPanel": "Open this panel",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field",
                    "selectFocusedDate": "Select the date in focus",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
            }
            placeholder="Date"
            readOnly={false}
            renderCalendarInfo={null}
            renderDay={null}
            renderMonth={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            withFullScreenPortal={false}
            withPortal={false}
        />
        <textarea
            onChange={[Function]}
            placeholder="Add a note for your expense (optional)"
            value=""
        />
        <button>
            Add Expense
        </button>
    </form>
</div>,
  "nodes": Array [
    <div>
      
      <form
            onSubmit={[Function]}
      >
            <input
                  autoFocus={true}
                  onChange={[Function]}
                  placeholder="Description"
                  type="text"
                  value=""
            />
            <input
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value=""
            />
            <SingleDatePicker
                  anchorDirection="left"
                  customCloseIcon={null}
                  customInputIcon={null}
                  date={"1970-01-01T00:00:00.000Z"}
                  daySize={39}
                  disabled={false}
                  displayFormat={[Function]}
                  enableOutsideDays={false}
                  firstDayOfWeek={null}
                  focused={false}
                  hideKeyboardShortcutsPanel={false}
                  horizontalMargin={0}
                  id="date"
                  initialVisibleMonth={null}
                  isDayBlocked={[Function]}
                  isDayHighlighted={[Function]}
                  isOutsideRange={[Function]}
                  isRTL={false}
                  keepOpenOnDateSelect={false}
                  monthFormat="MMMM YYYY"
                  navNext={null}
                  navPrev={null}
                  numberOfMonths={1}
                  onClose={[Function]}
                  onDateChange={[Function]}
                  onFocusChange={[Function]}
                  onNextMonthClick={[Function]}
                  onPrevMonthClick={[Function]}
                  orientation="horizontal"
                  phrases={
                        Object {
                              "chooseAvailableDate": [Function],
                              "clearDate": "Clear Date",
                              "closeDatePicker": "Close",
                              "dateIsUnavailable": [Function],
                              "enterKey": "Enter key",
                              "escape": "Escape key",
                              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                              "homeEnd": "Home and end keys",
                              "jumpToNextMonth": "Move forward to switch to the next month",
                              "jumpToPrevMonth": "Move backward to switch to the previous month",
                              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                              "keyboardShortcuts": "Keyboard Shortcuts",
                              "leftArrowRightArrow": "Right and left arrow keys",
                              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                              "moveFocusByOneMonth": "Switch months",
                              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                              "openThisPanel": "Open this panel",
                              "pageUpPageDown": "page up and page down keys",
                              "questionMark": "Question mark",
                              "returnFocusToInput": "Return to the date input field",
                              "selectFocusedDate": "Select the date in focus",
                              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                              "upArrowDownArrow": "up and down arrow keys",
                            }
                  }
                  placeholder="Date"
                  readOnly={false}
                  renderCalendarInfo={null}
                  renderDay={null}
                  renderMonth={null}
                  reopenPickerOnClearDate={false}
                  required={false}
                  screenReaderInputMessage=""
                  showClearDate={false}
                  showDefaultInputIcon={false}
                  withFullScreenPortal={false}
                  withPortal={false}
            />
            <textarea
                  onChange={[Function]}
                  placeholder="Add a note for your expense (optional)"
                  value=""
            />
            <button>
                  Add Expense
            </button>
      </form>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ExpenseForm />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ExpenseForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "onAmountChange": [Function],
        "onDateChange": [Function],
        "onDescriptionChange": [Function],
        "onFocusChange": [Function],
        "onNoteChange": [Function],
        "onSubmit": [Function],
        "props": Object {},
        "refs": Object {},
        "state": Object {
          "amount": "",
          "calendarFocused": false,
          "createdAt": "1970-01-01T00:00:00.000Z",
          "description": "",
          "error": "",
          "note": "",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          
          <form
                    onSubmit={[Function]}
          >
                    <input
                              autoFocus={true}
                              onChange={[Function]}
                              placeholder="Description"
                              type="text"
                              value=""
                    />
                    <input
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value=""
                    />
                    <SingleDatePicker
                              anchorDirection="left"
                              customCloseIcon={null}
                              customInputIcon={null}
                              date={"1970-01-01T00:00:00.000Z"}
                              daySize={39}
                              disabled={false}
                              displayFormat={[Function]}
                              enableOutsideDays={false}
                              firstDayOfWeek={null}
                              focused={false}
                              hideKeyboardShortcutsPanel={false}
                              horizontalMargin={0}
                              id="date"
                              initialVisibleMonth={null}
                              isDayBlocked={[Function]}
                              isDayHighlighted={[Function]}
                              isOutsideRange={[Function]}
                              isRTL={false}
                              keepOpenOnDateSelect={false}
                              monthFormat="MMMM YYYY"
                              navNext={null}
                              navPrev={null}
                              numberOfMonths={1}
                              onClose={[Function]}
                              onDateChange={[Function]}
                              onFocusChange={[Function]}
                              onNextMonthClick={[Function]}
                              onPrevMonthClick={[Function]}
                              orientation="horizontal"
                              phrases={
                                        Object {
                                                  "chooseAvailableDate": [Function],
                                                  "clearDate": "Clear Date",
                                                  "closeDatePicker": "Close",
                                                  "dateIsUnavailable": [Function],
                                                  "enterKey": "Enter key",
                                                  "escape": "Escape key",
                                                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                                  "homeEnd": "Home and end keys",
                                                  "jumpToNextMonth": "Move forward to switch to the next month",
                                                  "jumpToPrevMonth": "Move backward to switch to the previous month",
                                                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                                  "keyboardShortcuts": "Keyboard Shortcuts",
                                                  "leftArrowRightArrow": "Right and left arrow keys",
                                                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                                  "moveFocusByOneMonth": "Switch months",
                                                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                                  "openThisPanel": "Open this panel",
                                                  "pageUpPageDown": "page up and page down keys",
                                                  "questionMark": "Question mark",
                                                  "returnFocusToInput": "Return to the date input field",
                                                  "selectFocusedDate": "Select the date in focus",
                                                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                                  "upArrowDownArrow": "up and down arrow keys",
                                                }
                              }
                              placeholder="Date"
                              readOnly={false}
                              renderCalendarInfo={null}
                              renderDay={null}
                              renderMonth={null}
                              reopenPickerOnClearDate={false}
                              required={false}
                              screenReaderInputMessage=""
                              showClearDate={false}
                              showDefaultInputIcon={false}
                              withFullScreenPortal={false}
                              withPortal={false}
                    />
                    <textarea
                              onChange={[Function]}
                              placeholder="Add a note for your expense (optional)"
                              value=""
                    />
                    <button>
                              Add Expense
                    </button>
          </form>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
          
          <form
                    onSubmit={[Function]}
          >
                    <input
                              autoFocus={true}
                              onChange={[Function]}
                              placeholder="Description"
                              type="text"
                              value=""
                    />
                    <input
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value=""
                    />
                    <SingleDatePicker
                              anchorDirection="left"
                              customCloseIcon={null}
                              customInputIcon={null}
                              date={"1970-01-01T00:00:00.000Z"}
                              daySize={39}
                              disabled={false}
                              displayFormat={[Function]}
                              enableOutsideDays={false}
                              firstDayOfWeek={null}
                              focused={false}
                              hideKeyboardShortcutsPanel={false}
                              horizontalMargin={0}
                              id="date"
                              initialVisibleMonth={null}
                              isDayBlocked={[Function]}
                              isDayHighlighted={[Function]}
                              isOutsideRange={[Function]}
                              isRTL={false}
                              keepOpenOnDateSelect={false}
                              monthFormat="MMMM YYYY"
                              navNext={null}
                              navPrev={null}
                              numberOfMonths={1}
                              onClose={[Function]}
                              onDateChange={[Function]}
                              onFocusChange={[Function]}
                              onNextMonthClick={[Function]}
                              onPrevMonthClick={[Function]}
                              orientation="horizontal"
                              phrases={
                                        Object {
                                                  "chooseAvailableDate": [Function],
                                                  "clearDate": "Clear Date",
                                                  "closeDatePicker": "Close",
                                                  "dateIsUnavailable": [Function],
                                                  "enterKey": "Enter key",
                                                  "escape": "Escape key",
                                                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                                  "homeEnd": "Home and end keys",
                                                  "jumpToNextMonth": "Move forward to switch to the next month",
                                                  "jumpToPrevMonth": "Move backward to switch to the previous month",
                                                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                                  "keyboardShortcuts": "Keyboard Shortcuts",
                                                  "leftArrowRightArrow": "Right and left arrow keys",
                                                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                                  "moveFocusByOneMonth": "Switch months",
                                                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                                  "openThisPanel": "Open this panel",
                                                  "pageUpPageDown": "page up and page down keys",
                                                  "questionMark": "Question mark",
                                                  "returnFocusToInput": "Return to the date input field",
                                                  "selectFocusedDate": "Select the date in focus",
                                                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                                  "upArrowDownArrow": "up and down arrow keys",
                                                }
                              }
                              placeholder="Date"
                              readOnly={false}
                              renderCalendarInfo={null}
                              renderDay={null}
                              renderMonth={null}
                              reopenPickerOnClearDate={false}
                              required={false}
                              screenReaderInputMessage=""
                              showClearDate={false}
                              showDefaultInputIcon={false}
                              withFullScreenPortal={false}
                              withPortal={false}
                    />
                    <textarea
                              onChange={[Function]}
                              placeholder="Add a note for your expense (optional)"
                              value=""
                    />
                    <button>
                              Add Expense
                    </button>
          </form>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpenseForm />,
}
`;

exports[`should render ExpenseForm correctly with expense data 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    
    <form
        onSubmit={[Function]}
    >
        <input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Description"
            type="text"
            value="Rent"
        />
        <input
            onChange={[Function]}
            placeholder="Amount"
            type="text"
            value="1095"
        />
        <SingleDatePicker
            anchorDirection="left"
            customCloseIcon={null}
            customInputIcon={null}
            date={"1969-12-28T00:00:00.000Z"}
            daySize={39}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            id="date"
            initialVisibleMonth={null}
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            orientation="horizontal"
            phrases={
                Object {
                    "chooseAvailableDate": [Function],
                    "clearDate": "Clear Date",
                    "closeDatePicker": "Close",
                    "dateIsUnavailable": [Function],
                    "enterKey": "Enter key",
                    "escape": "Escape key",
                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                    "homeEnd": "Home and end keys",
                    "jumpToNextMonth": "Move forward to switch to the next month",
                    "jumpToPrevMonth": "Move backward to switch to the previous month",
                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                    "keyboardShortcuts": "Keyboard Shortcuts",
                    "leftArrowRightArrow": "Right and left arrow keys",
                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                    "moveFocusByOneMonth": "Switch months",
                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                    "openThisPanel": "Open this panel",
                    "pageUpPageDown": "page up and page down keys",
                    "questionMark": "Question mark",
                    "returnFocusToInput": "Return to the date input field",
                    "selectFocusedDate": "Select the date in focus",
                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                    "upArrowDownArrow": "up and down arrow keys",
                  }
            }
            placeholder="Date"
            readOnly={false}
            renderCalendarInfo={null}
            renderDay={null}
            renderMonth={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            withFullScreenPortal={false}
            withPortal={false}
        />
        <textarea
            onChange={[Function]}
            placeholder="Add a note for your expense (optional)"
            value=""
        />
        <button>
            Add Expense
        </button>
    </form>
</div>,
  "nodes": Array [
    <div>
      
      <form
            onSubmit={[Function]}
      >
            <input
                  autoFocus={true}
                  onChange={[Function]}
                  placeholder="Description"
                  type="text"
                  value="Rent"
            />
            <input
                  onChange={[Function]}
                  placeholder="Amount"
                  type="text"
                  value="1095"
            />
            <SingleDatePicker
                  anchorDirection="left"
                  customCloseIcon={null}
                  customInputIcon={null}
                  date={"1969-12-28T00:00:00.000Z"}
                  daySize={39}
                  disabled={false}
                  displayFormat={[Function]}
                  enableOutsideDays={false}
                  firstDayOfWeek={null}
                  focused={false}
                  hideKeyboardShortcutsPanel={false}
                  horizontalMargin={0}
                  id="date"
                  initialVisibleMonth={null}
                  isDayBlocked={[Function]}
                  isDayHighlighted={[Function]}
                  isOutsideRange={[Function]}
                  isRTL={false}
                  keepOpenOnDateSelect={false}
                  monthFormat="MMMM YYYY"
                  navNext={null}
                  navPrev={null}
                  numberOfMonths={1}
                  onClose={[Function]}
                  onDateChange={[Function]}
                  onFocusChange={[Function]}
                  onNextMonthClick={[Function]}
                  onPrevMonthClick={[Function]}
                  orientation="horizontal"
                  phrases={
                        Object {
                              "chooseAvailableDate": [Function],
                              "clearDate": "Clear Date",
                              "closeDatePicker": "Close",
                              "dateIsUnavailable": [Function],
                              "enterKey": "Enter key",
                              "escape": "Escape key",
                              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                              "homeEnd": "Home and end keys",
                              "jumpToNextMonth": "Move forward to switch to the next month",
                              "jumpToPrevMonth": "Move backward to switch to the previous month",
                              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                              "keyboardShortcuts": "Keyboard Shortcuts",
                              "leftArrowRightArrow": "Right and left arrow keys",
                              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                              "moveFocusByOneMonth": "Switch months",
                              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                              "openThisPanel": "Open this panel",
                              "pageUpPageDown": "page up and page down keys",
                              "questionMark": "Question mark",
                              "returnFocusToInput": "Return to the date input field",
                              "selectFocusedDate": "Select the date in focus",
                              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                              "upArrowDownArrow": "up and down arrow keys",
                            }
                  }
                  placeholder="Date"
                  readOnly={false}
                  renderCalendarInfo={null}
                  renderDay={null}
                  renderMonth={null}
                  reopenPickerOnClearDate={false}
                  required={false}
                  screenReaderInputMessage=""
                  showClearDate={false}
                  showDefaultInputIcon={false}
                  withFullScreenPortal={false}
                  withPortal={false}
            />
            <textarea
                  onChange={[Function]}
                  placeholder="Add a note for your expense (optional)"
                  value=""
            />
            <button>
                  Add Expense
            </button>
      </form>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ExpenseForm
        expense={
                Object {
                        "amount": 109500,
                        "createdAt": -345600000,
                        "description": "Rent",
                        "id": "2",
                        "note": "",
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ExpenseForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "onAmountChange": [Function],
        "onDateChange": [Function],
        "onDescriptionChange": [Function],
        "onFocusChange": [Function],
        "onNoteChange": [Function],
        "onSubmit": [Function],
        "props": Object {
          "expense": Object {
            "amount": 109500,
            "createdAt": -345600000,
            "description": "Rent",
            "id": "2",
            "note": "",
          },
        },
        "refs": Object {},
        "state": Object {
          "amount": "1095",
          "calendarFocused": false,
          "createdAt": "1969-12-28T00:00:00.000Z",
          "description": "Rent",
          "error": "",
          "note": "",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          
          <form
                    onSubmit={[Function]}
          >
                    <input
                              autoFocus={true}
                              onChange={[Function]}
                              placeholder="Description"
                              type="text"
                              value="Rent"
                    />
                    <input
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value="1095"
                    />
                    <SingleDatePicker
                              anchorDirection="left"
                              customCloseIcon={null}
                              customInputIcon={null}
                              date={"1969-12-28T00:00:00.000Z"}
                              daySize={39}
                              disabled={false}
                              displayFormat={[Function]}
                              enableOutsideDays={false}
                              firstDayOfWeek={null}
                              focused={false}
                              hideKeyboardShortcutsPanel={false}
                              horizontalMargin={0}
                              id="date"
                              initialVisibleMonth={null}
                              isDayBlocked={[Function]}
                              isDayHighlighted={[Function]}
                              isOutsideRange={[Function]}
                              isRTL={false}
                              keepOpenOnDateSelect={false}
                              monthFormat="MMMM YYYY"
                              navNext={null}
                              navPrev={null}
                              numberOfMonths={1}
                              onClose={[Function]}
                              onDateChange={[Function]}
                              onFocusChange={[Function]}
                              onNextMonthClick={[Function]}
                              onPrevMonthClick={[Function]}
                              orientation="horizontal"
                              phrases={
                                        Object {
                                                  "chooseAvailableDate": [Function],
                                                  "clearDate": "Clear Date",
                                                  "closeDatePicker": "Close",
                                                  "dateIsUnavailable": [Function],
                                                  "enterKey": "Enter key",
                                                  "escape": "Escape key",
                                                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                                  "homeEnd": "Home and end keys",
                                                  "jumpToNextMonth": "Move forward to switch to the next month",
                                                  "jumpToPrevMonth": "Move backward to switch to the previous month",
                                                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                                  "keyboardShortcuts": "Keyboard Shortcuts",
                                                  "leftArrowRightArrow": "Right and left arrow keys",
                                                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                                  "moveFocusByOneMonth": "Switch months",
                                                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                                  "openThisPanel": "Open this panel",
                                                  "pageUpPageDown": "page up and page down keys",
                                                  "questionMark": "Question mark",
                                                  "returnFocusToInput": "Return to the date input field",
                                                  "selectFocusedDate": "Select the date in focus",
                                                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                                  "upArrowDownArrow": "up and down arrow keys",
                                                }
                              }
                              placeholder="Date"
                              readOnly={false}
                              renderCalendarInfo={null}
                              renderDay={null}
                              renderMonth={null}
                              reopenPickerOnClearDate={false}
                              required={false}
                              screenReaderInputMessage=""
                              showClearDate={false}
                              showDefaultInputIcon={false}
                              withFullScreenPortal={false}
                              withPortal={false}
                    />
                    <textarea
                              onChange={[Function]}
                              placeholder="Add a note for your expense (optional)"
                              value=""
                    />
                    <button>
                              Add Expense
                    </button>
          </form>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          
          <form
                    onSubmit={[Function]}
          >
                    <input
                              autoFocus={true}
                              onChange={[Function]}
                              placeholder="Description"
                              type="text"
                              value="Rent"
                    />
                    <input
                              onChange={[Function]}
                              placeholder="Amount"
                              type="text"
                              value="1095"
                    />
                    <SingleDatePicker
                              anchorDirection="left"
                              customCloseIcon={null}
                              customInputIcon={null}
                              date={"1969-12-28T00:00:00.000Z"}
                              daySize={39}
                              disabled={false}
                              displayFormat={[Function]}
                              enableOutsideDays={false}
                              firstDayOfWeek={null}
                              focused={false}
                              hideKeyboardShortcutsPanel={false}
                              horizontalMargin={0}
                              id="date"
                              initialVisibleMonth={null}
                              isDayBlocked={[Function]}
                              isDayHighlighted={[Function]}
                              isOutsideRange={[Function]}
                              isRTL={false}
                              keepOpenOnDateSelect={false}
                              monthFormat="MMMM YYYY"
                              navNext={null}
                              navPrev={null}
                              numberOfMonths={1}
                              onClose={[Function]}
                              onDateChange={[Function]}
                              onFocusChange={[Function]}
                              onNextMonthClick={[Function]}
                              onPrevMonthClick={[Function]}
                              orientation="horizontal"
                              phrases={
                                        Object {
                                                  "chooseAvailableDate": [Function],
                                                  "clearDate": "Clear Date",
                                                  "closeDatePicker": "Close",
                                                  "dateIsUnavailable": [Function],
                                                  "enterKey": "Enter key",
                                                  "escape": "Escape key",
                                                  "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                                  "homeEnd": "Home and end keys",
                                                  "jumpToNextMonth": "Move forward to switch to the next month",
                                                  "jumpToPrevMonth": "Move backward to switch to the previous month",
                                                  "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                                  "keyboardShortcuts": "Keyboard Shortcuts",
                                                  "leftArrowRightArrow": "Right and left arrow keys",
                                                  "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                                  "moveFocusByOneMonth": "Switch months",
                                                  "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                                  "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                                  "openThisPanel": "Open this panel",
                                                  "pageUpPageDown": "page up and page down keys",
                                                  "questionMark": "Question mark",
                                                  "returnFocusToInput": "Return to the date input field",
                                                  "selectFocusedDate": "Select the date in focus",
                                                  "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                                  "upArrowDownArrow": "up and down arrow keys",
                                                }
                              }
                              placeholder="Date"
                              readOnly={false}
                              renderCalendarInfo={null}
                              renderDay={null}
                              renderMonth={null}
                              reopenPickerOnClearDate={false}
                              required={false}
                              screenReaderInputMessage=""
                              showClearDate={false}
                              showDefaultInputIcon={false}
                              withFullScreenPortal={false}
                              withPortal={false}
                    />
                    <textarea
                              onChange={[Function]}
                              placeholder="Add a note for your expense (optional)"
                              value=""
                    />
                    <button>
                              Add Expense
                    </button>
          </form>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpenseForm
    expense={
        Object {
            "amount": 109500,
            "createdAt": -345600000,
            "description": "Rent",
            "id": "2",
            "note": "",
          }
    }
/>,
}
`;
